Update lists at 20250628-0901

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -107,7 +107,6 @@ allow 109.71.252.97;
 allow 113.20.31.38;
 allow 114.172.205.8;
 allow 114.35.245.150;
-allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
 allow 118.194.234.240;
@@ -431,6 +430,9 @@ allow 185.241.208.92;
 allow 185.244.192.175;
 allow 185.244.192.184;
 allow 185.246.128.161;
+allow 185.246.188.115;
+allow 185.246.188.116;
+allow 185.246.188.117;
 allow 185.246.188.149;
 allow 185.246.188.73;
 allow 185.246.188.74;
@@ -570,6 +572,7 @@ allow 194.163.157.49;
 allow 194.26.192.77;
 allow 194.53.137.156;
 allow 194.87.55.98;
+allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.47.238.176;
@@ -718,7 +721,6 @@ allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:545c::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1518,6 +1520,7 @@ allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
+allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a11:6100:0:1467::;
 allow 2a11:6100:0:156b::;
 allow 2a12:6fc2:8000::1b1;
@@ -1856,7 +1859,6 @@ allow 85.239.55.184;
 allow 85.239.55.189;
 allow 85.239.55.192;
 allow 85.239.55.201;
-allow 85.239.55.228;
 allow 85.239.55.230;
 allow 85.239.55.239;
 allow 85.239.55.24;
@@ -1866,7 +1868,6 @@ allow 85.239.55.250;
 allow 85.239.55.31;
 allow 85.239.55.37;
 allow 85.239.55.51;
-allow 85.239.55.80;
 allow 85.90.196.162;
 allow 85.93.218.204;
 allow 87.118.110.27;
@@ -1964,10 +1965,8 @@ allow 94.32.179.134;
 allow 94.72.103.33;
 allow 94.72.104.135;
 allow 94.74.164.89;
-allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.143.193.125;
-allow 95.168.173.143;
 allow 95.211.244.28;
 allow 95.216.107.148;
 allow 96.9.125.211;
