--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -101,7 +101,6 @@ allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:545c::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -690,6 +689,7 @@ allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
+allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a11:6100:0:1467::;
 allow 2a11:6100:0:156b::;
 allow 2a12:6fc2:8000::1b1;
