--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -107,6 +107,7 @@ set_real_ip_from 109.71.252.97;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.172.205.8;
 set_real_ip_from 114.35.245.150;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
 set_real_ip_from 118.194.234.240;
@@ -572,7 +573,6 @@ set_real_ip_from 194.163.157.49;
 set_real_ip_from 194.26.192.77;
 set_real_ip_from 194.53.137.156;
 set_real_ip_from 194.87.55.98;
-set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.47.238.176;
@@ -721,6 +721,7 @@ set_real_ip_from 2001:67c:e60:c0c:192:42:116:218;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:219;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:545c::b;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -957,7 +958,6 @@ set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2600:3c0b::f03c:95ff:fefa:bdff;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:f6f6:2:2634::1;
-set_real_ip_from 2602:f6f6:2:69ed::1;
 set_real_ip_from 2602:f6f6:2:ad5c::1;
 set_real_ip_from 2602:f6f6:2:cd1f::1;
 set_real_ip_from 2602:f6f6:2:d31a::1;
@@ -1252,7 +1252,6 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
@@ -1520,7 +1519,6 @@ set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
-set_real_ip_from 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a11:6100:0:1467::;
 set_real_ip_from 2a11:6100:0:156b::;
 set_real_ip_from 2a12:6fc2:8000::1b1;
@@ -1613,7 +1611,6 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
-set_real_ip_from 38.135.24.177;
 set_real_ip_from 38.135.24.30;
 set_real_ip_from 38.135.24.31;
 set_real_ip_from 38.135.24.32;
@@ -1756,7 +1753,6 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1846,28 +1842,6 @@ set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.226.13;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 85.239.41.130;
-set_real_ip_from 85.239.55.11;
-set_real_ip_from 85.239.55.110;
-set_real_ip_from 85.239.55.112;
-set_real_ip_from 85.239.55.114;
-set_real_ip_from 85.239.55.123;
-set_real_ip_from 85.239.55.132;
-set_real_ip_from 85.239.55.168;
-set_real_ip_from 85.239.55.173;
-set_real_ip_from 85.239.55.174;
-set_real_ip_from 85.239.55.184;
-set_real_ip_from 85.239.55.189;
-set_real_ip_from 85.239.55.192;
-set_real_ip_from 85.239.55.201;
-set_real_ip_from 85.239.55.230;
-set_real_ip_from 85.239.55.239;
-set_real_ip_from 85.239.55.24;
-set_real_ip_from 85.239.55.249;
-set_real_ip_from 85.239.55.25;
-set_real_ip_from 85.239.55.250;
-set_real_ip_from 85.239.55.31;
-set_real_ip_from 85.239.55.37;
-set_real_ip_from 85.239.55.51;
 set_real_ip_from 85.90.196.162;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 87.118.110.27;
@@ -1909,30 +1883,6 @@ set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.236.91;
 set_real_ip_from 91.219.237.39;
-set_real_ip_from 91.227.77.107;
-set_real_ip_from 91.227.77.108;
-set_real_ip_from 91.227.77.119;
-set_real_ip_from 91.227.77.125;
-set_real_ip_from 91.227.77.139;
-set_real_ip_from 91.227.77.158;
-set_real_ip_from 91.227.77.160;
-set_real_ip_from 91.227.77.181;
-set_real_ip_from 91.227.77.193;
-set_real_ip_from 91.227.77.200;
-set_real_ip_from 91.227.77.208;
-set_real_ip_from 91.227.77.209;
-set_real_ip_from 91.227.77.226;
-set_real_ip_from 91.227.77.229;
-set_real_ip_from 91.227.77.237;
-set_real_ip_from 91.227.77.25;
-set_real_ip_from 91.227.77.31;
-set_real_ip_from 91.227.77.36;
-set_real_ip_from 91.227.77.44;
-set_real_ip_from 91.227.77.48;
-set_real_ip_from 91.227.77.51;
-set_real_ip_from 91.227.77.54;
-set_real_ip_from 91.227.77.62;
-set_real_ip_from 91.227.77.97;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.243.24.163;
