Update lists at 20250628-1801

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -101,6 +101,7 @@ allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:545c::b;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -458,6 +459,7 @@ allow 2a07:e042:1:182::1;
 allow 2a09:61c0::20;
 allow 2a09:61c0::21;
 allow 2a09:61c0::22;
+allow 2a09:61c0::beef;
 allow 2a09:b280:fe01:61::a;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:f4c0:16c:10::1;
@@ -586,7 +588,6 @@ allow 2a0b:f4c2:4::97;
 allow 2a0b:f4c2:4::98;
 allow 2a0b:f4c2:4::99;
 allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
-allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 allow 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
 allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
@@ -686,7 +687,6 @@ allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
-allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:1467::;
 allow 2a11:6100:0:156b::;
 allow 2a12:6fc2:8000::1b1;
