--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -105,8 +105,8 @@ allow 109.71.252.182;
 allow 109.71.252.88;
 allow 109.71.252.97;
 allow 113.20.31.38;
+allow 114.172.205.8;
 allow 114.35.245.150;
-allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
 allow 118.194.234.240;
@@ -572,6 +572,7 @@ allow 194.163.157.49;
 allow 194.26.192.77;
 allow 194.53.137.156;
 allow 194.87.55.98;
+allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.47.238.176;
@@ -720,7 +721,6 @@ allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:545c::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -897,24 +897,7 @@ allow 23.151.8.8;
 allow 23.155.8.104;
 allow 23.184.48.13;
 allow 23.184.48.78;
-allow 23.191.200.10;
-allow 23.191.200.11;
-allow 23.191.200.12;
-allow 23.191.200.13;
-allow 23.191.200.14;
-allow 23.191.200.15;
-allow 23.191.200.16;
-allow 23.191.200.17;
-allow 23.191.200.18;
-allow 23.191.200.19;
 allow 23.191.200.2;
-allow 23.191.200.20;
-allow 23.191.200.21;
-allow 23.191.200.22;
-allow 23.191.200.23;
-allow 23.191.200.24;
-allow 23.191.200.25;
-allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
@@ -924,9 +907,6 @@ allow 23.191.200.31;
 allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
-allow 23.191.200.7;
-allow 23.191.200.8;
-allow 23.191.200.9;
 allow 23.236.122.193;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
@@ -1517,9 +1497,9 @@ allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
+allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a11:6100:0:1467::;
 allow 2a11:6100:0:156b::;
-allow 2a12:6fc2:8000::1b1;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:223;
 allow 2a12:a800:11:1:124:198:131:253;
@@ -1841,7 +1821,6 @@ allow 84.19.182.20;
 allow 84.211.226.13;
 allow 84.239.46.144;
 allow 85.239.41.130;
-allow 85.90.196.162;
 allow 85.93.218.204;
 allow 87.118.110.27;
 allow 87.118.116.103;
@@ -1856,6 +1835,7 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
@@ -1883,6 +1863,7 @@ allow 91.219.236.101;
 allow 91.219.236.91;
 allow 91.92.109.126;
 allow 91.92.109.43;
+allow 92.113.144.149;
 allow 92.243.24.163;
 allow 92.246.84.133;
 allow 93.113.25.239;
@@ -1894,6 +1875,7 @@ allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
 allow 93.95.228.205;
+allow 93.95.231.118;
 allow 93.95.231.14;
 allow 93.95.231.88;
 allow 93.99.104.128;
