--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -557,7 +557,6 @@ set_real_ip_from 193.218.118.89;
 set_real_ip_from 193.237.221.228;
 set_real_ip_from 193.239.232.102;
 set_real_ip_from 193.26.115.140;
-set_real_ip_from 193.26.115.212;
 set_real_ip_from 193.26.115.243;
 set_real_ip_from 193.26.115.43;
 set_real_ip_from 193.26.115.61;
@@ -1231,6 +1230,7 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
@@ -1560,7 +1560,6 @@ set_real_ip_from 2a12:a800:2:1:45:80:158:27;
 set_real_ip_from 2a12:a800:2:1:45:80:158:69;
 set_real_ip_from 2a12:a800:8:1:45:94:31:68;
 set_real_ip_from 2a12:a800:9:1:193:26:115:140;
-set_real_ip_from 2a12:a800:9:1:193:26:115:212;
 set_real_ip_from 2a12:a800:9:1:193:26:115:43;
 set_real_ip_from 2a12:a800:9:1:193:26:115:61;
 set_real_ip_from 2a12:de40:21:1be4::;
@@ -1732,6 +1731,7 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1739,6 +1739,7 @@ set_real_ip_from 5.255.110.120;
 set_real_ip_from 5.255.111.64;
 set_real_ip_from 5.255.115.58;
 set_real_ip_from 5.255.117.56;
+set_real_ip_from 5.255.118.183;
 set_real_ip_from 5.255.118.218;
 set_real_ip_from 5.255.121.71;
 set_real_ip_from 5.255.123.158;
@@ -1835,7 +1836,6 @@ set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
 set_real_ip_from 88.80.26.3;
 set_real_ip_from 88.80.26.4;
-set_real_ip_from 89.110.95.200;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
