--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -660,6 +660,7 @@ allow 2a0e:bfc2:0:2c::1;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:d604:1:151::2;
 allow 2a0e:e701:1198::1;
+allow 2a0f:7803:fac5:abe8::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:ca80::1260:4bff:fea4:19b0;
 allow 2a0f:ca80::2e59:e5ff:fe49:3738;
