--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -1470,6 +1470,7 @@ deny 2a0e:bfc2:0:2c::1;
 deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:d604:1:151::2;
 deny 2a0e:e701:1198::1;
+deny 2a0f:7803:fac5:abe8::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:ca80::1260:4bff:fea4:19b0;
 deny 2a0f:ca80::2e59:e5ff:fe49:3738;
@@ -1645,6 +1646,7 @@ deny 45.141.215.95;
 deny 45.141.215.97;
 deny 45.145.93.133;
 deny 45.148.10.111;
+deny 45.192.242.89;
 deny 45.61.185.172;
 deny 45.61.186.203;
 deny 45.61.187.200;
@@ -1718,7 +1720,6 @@ deny 46.30.188.218;
 deny 46.38.243.210;
 deny 46.8.43.110;
 deny 50.7.40.39;
-deny 5.101.82.22;
 deny 5.101.82.67;
 deny 5.104.84.183;
 deny 5.104.86.6;
@@ -1862,7 +1863,6 @@ deny 91.219.236.101;
 deny 91.219.236.91;
 deny 91.92.109.126;
 deny 91.92.109.43;
-deny 92.113.144.149;
 deny 92.243.24.163;
 deny 92.246.84.133;
 deny 93.113.25.239;
