Update lists at 20250630-0600

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1835,6 +1835,7 @@ allow 88.151.194.24;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
