--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -215,7 +215,9 @@ set_real_ip_from 2605:a141:2261:4410::1;
 set_real_ip_from 2605:a142:2263:1906::1;
 set_real_ip_from 2605:aa80:0:9::3;
 set_real_ip_from 2607:5300:201:3100::35c5;
+set_real_ip_from 2607:5300:203:b45b::;
 set_real_ip_from 2607:5300:205:200::4894;
+set_real_ip_from 2607:5300:60:566f::1;
 set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 set_real_ip_from 2620:18c:0:192::e0:130;
