Update lists at 20250701-0901

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -595,6 +595,7 @@ deny 2a0b:f4c2:4::97;
 deny 2a0b:f4c2:4::98;
 deny 2a0b:f4c2:4::99;
 deny 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
+deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 deny 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
 deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
@@ -666,7 +667,6 @@ deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:d604:1:151::2;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
-deny 2a0f:7803:fac5:abe8::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:ca80::1260:4bff:fea4:19b0;
 deny 2a0f:ca80::2e59:e5ff:fe49:3738;
@@ -757,6 +757,7 @@ deny 2a12:a800:2:1:45:80:158:27;
 deny 2a12:a800:2:1:45:80:158:69;
 deny 2a12:a800:8:1:45:94:31:68;
 deny 2a12:a800:9:1:193:26:115:140;
+deny 2a12:a800:9:1:193:26:115:212;
 deny 2a12:a800:9:1:193:26:115:43;
 deny 2a12:a800:9:1:193:26:115:61;
 deny 2a12:a800:9:1:45:88:186:92;
