--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -564,6 +564,7 @@ set_real_ip_from 193.218.118.89;
 set_real_ip_from 193.237.221.228;
 set_real_ip_from 193.239.232.102;
 set_real_ip_from 193.26.115.140;
+set_real_ip_from 193.26.115.212;
 set_real_ip_from 193.26.115.243;
 set_real_ip_from 193.26.115.43;
 set_real_ip_from 193.26.115.61;
@@ -947,7 +948,6 @@ set_real_ip_from 2402:1f00:8100:400::9;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 2407:3640:2259:6302::1;
 set_real_ip_from 2407:3641:2259:8208::1;
-set_real_ip_from 24.240.72.170;
 set_real_ip_from 2.56.10.36;
 set_real_ip_from 2.58.56.220;
 set_real_ip_from 2.58.56.35;
@@ -1431,6 +1431,7 @@ set_real_ip_from 2a0b:f4c2:4::97;
 set_real_ip_from 2a0b:f4c2:4::98;
 set_real_ip_from 2a0b:f4c2:4::99;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
@@ -1502,7 +1503,6 @@ set_real_ip_from 2a0e:bfc7:0:3::2d83;
 set_real_ip_from 2a0e:d604:1:151::2;
 set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:30::1;
-set_real_ip_from 2a0f:7803:fac5:abe8::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:ca80::1260:4bff:fea4:19b0;
 set_real_ip_from 2a0f:ca80::2e59:e5ff:fe49:3738;
@@ -1593,6 +1593,7 @@ set_real_ip_from 2a12:a800:2:1:45:80:158:27;
 set_real_ip_from 2a12:a800:2:1:45:80:158:69;
 set_real_ip_from 2a12:a800:8:1:45:94:31:68;
 set_real_ip_from 2a12:a800:9:1:193:26:115:140;
+set_real_ip_from 2a12:a800:9:1:193:26:115:212;
 set_real_ip_from 2a12:a800:9:1:193:26:115:43;
 set_real_ip_from 2a12:a800:9:1:193:26:115:61;
 set_real_ip_from 2a12:a800:9:1:45:88:186:92;
@@ -1678,7 +1679,6 @@ set_real_ip_from 45.141.215.95;
 set_real_ip_from 45.141.215.97;
 set_real_ip_from 45.145.93.133;
 set_real_ip_from 45.148.10.111;
-set_real_ip_from 45.192.242.89;
 set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.61.186.203;
 set_real_ip_from 45.61.187.200;
@@ -1850,6 +1850,8 @@ set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.131.86;
 set_real_ip_from 82.221.139.190;
+set_real_ip_from 82.29.128.140;
+set_real_ip_from 82.29.128.145;
 set_real_ip_from 82.29.153.76;
 set_real_ip_from 83.147.17.190;
 set_real_ip_from 83.217.9.73;
