--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -595,6 +595,7 @@ set_real_ip_from 2a0b:f4c2:4::97;
 set_real_ip_from 2a0b:f4c2:4::98;
 set_real_ip_from 2a0b:f4c2:4::99;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
@@ -666,7 +667,6 @@ set_real_ip_from 2a0e:bfc7:0:3::2d83;
 set_real_ip_from 2a0e:d604:1:151::2;
 set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0e:fa00:0:30::1;
-set_real_ip_from 2a0f:7803:fac5:abe8::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:ca80::1260:4bff:fea4:19b0;
 set_real_ip_from 2a0f:ca80::2e59:e5ff:fe49:3738;
@@ -757,6 +757,7 @@ set_real_ip_from 2a12:a800:2:1:45:80:158:27;
 set_real_ip_from 2a12:a800:2:1:45:80:158:69;
 set_real_ip_from 2a12:a800:8:1:45:94:31:68;
 set_real_ip_from 2a12:a800:9:1:193:26:115:140;
+set_real_ip_from 2a12:a800:9:1:193:26:115:212;
 set_real_ip_from 2a12:a800:9:1:193:26:115:43;
 set_real_ip_from 2a12:a800:9:1:193:26:115:61;
 set_real_ip_from 2a12:a800:9:1:45:88:186:92;
