--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -219,6 +219,7 @@ deny 178.17.171.102;
 deny 178.17.174.14;
 deny 178.17.174.164;
 deny 178.175.148.209;
+deny 178.175.148.236;
 deny 178.175.148.246;
 deny 178.20.55.16;
 deny 178.20.55.182;
@@ -285,6 +286,7 @@ deny 185.170.114.25;
 deny 185.177.151.34;
 deny 185.183.157.214;
 deny 185.183.159.40;
+deny 185.183.192.147;
 deny 185.191.204.254;
 deny 185.195.236.55;
 deny 185.195.71.244;
@@ -598,7 +600,7 @@ deny 195.47.238.92;
 deny 195.47.238.93;
 deny 195.80.151.242;
 deny 195.88.74.206;
-deny 198.167.206.213;
+deny 198.167.206.197;
 deny 198.251.84.163;
 deny 198.251.84.237;
 deny 198.251.88.18;
@@ -1189,6 +1191,7 @@ deny 2a00:1dc0:caff:12c::4d3a;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
 deny 2a00:1dc0:caff:44::326d;
+deny 2a00:1dc0:caff:68::1;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:4d80::1;
@@ -1528,6 +1531,7 @@ deny 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a10:8a40:f313::29;
+deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 deny 2a11:6100:0:1467::;
 deny 2a11:6100:0:156b::;
@@ -1921,6 +1925,8 @@ deny 91.208.75.178;
 deny 91.208.75.239;
 deny 91.208.75.3;
 deny 91.208.75.4;
+deny 91.219.236.101;
+deny 91.219.236.91;
 deny 91.221.190.183;
 deny 91.227.77.107;
 deny 91.227.77.108;
@@ -1970,6 +1976,7 @@ deny 93.99.104.40;
 deny 94.102.51.15;
 deny 94.142.241.194;
 deny 94.142.244.16;
+deny 94.154.172.207;
 deny 94.156.152.234;
 deny 94.16.115.121;
 deny 94.16.121.91;
