--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -219,6 +219,7 @@ set_real_ip_from 178.17.171.102;
 set_real_ip_from 178.17.174.14;
 set_real_ip_from 178.17.174.164;
 set_real_ip_from 178.175.148.209;
+set_real_ip_from 178.175.148.236;
 set_real_ip_from 178.175.148.246;
 set_real_ip_from 178.20.55.16;
 set_real_ip_from 178.20.55.182;
@@ -285,6 +286,7 @@ set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.177.151.34;
 set_real_ip_from 185.183.157.214;
 set_real_ip_from 185.183.159.40;
+set_real_ip_from 185.183.192.147;
 set_real_ip_from 185.191.204.254;
 set_real_ip_from 185.195.236.55;
 set_real_ip_from 185.195.71.244;
@@ -598,7 +600,7 @@ set_real_ip_from 195.47.238.92;
 set_real_ip_from 195.47.238.93;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
-set_real_ip_from 198.167.206.213;
+set_real_ip_from 198.167.206.197;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
@@ -1189,6 +1191,7 @@ set_real_ip_from 2a00:1dc0:caff:12c::4d3a;
 set_real_ip_from 2a00:1dc0:caff:138::94d2;
 set_real_ip_from 2a00:1dc0:caff:15::45dc;
 set_real_ip_from 2a00:1dc0:caff:44::326d;
+set_real_ip_from 2a00:1dc0:caff:68::1;
 set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:4d80::1;
@@ -1528,6 +1531,7 @@ set_real_ip_from 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
 set_real_ip_from 2a10:8a40:f313::29;
+set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a11:6100:0:1467::;
 set_real_ip_from 2a11:6100:0:156b::;
@@ -1921,6 +1925,8 @@ set_real_ip_from 91.208.75.178;
 set_real_ip_from 91.208.75.239;
 set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
+set_real_ip_from 91.219.236.101;
+set_real_ip_from 91.219.236.91;
 set_real_ip_from 91.221.190.183;
 set_real_ip_from 91.227.77.107;
 set_real_ip_from 91.227.77.108;
@@ -1970,6 +1976,7 @@ set_real_ip_from 93.99.104.40;
 set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
+set_real_ip_from 94.154.172.207;
 set_real_ip_from 94.156.152.234;
 set_real_ip_from 94.16.115.121;
 set_real_ip_from 94.16.121.91;
