--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -662,6 +662,7 @@ deny 2a0e:bfc0:0:11::796d;
 deny 2a0e:bfc0:0:14::24a8;
 deny 2a0e:bfc0:0:2::8a62;
 deny 2a0e:bfc0:0:5::2;
+deny 2a0e:bfc2:0:2c::1;
 deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:d604:1:151::2;
 deny 2a0e:e701:1198::1;
