Update lists at 20250703-1801

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -100,7 +100,6 @@ allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:545c::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -516,6 +515,21 @@ allow 2a0b:f4c2:2::60;
 allow 2a0b:f4c2:2::61;
 allow 2a0b:f4c2:2::62;
 allow 2a0b:f4c2:2::63;
+allow 2a0b:f4c2:4::100;
+allow 2a0b:f4c2:4::101;
+allow 2a0b:f4c2:4::102;
+allow 2a0b:f4c2:4::103;
+allow 2a0b:f4c2:4::104;
+allow 2a0b:f4c2:4::105;
+allow 2a0b:f4c2:4::106;
+allow 2a0b:f4c2:4::107;
+allow 2a0b:f4c2:4::108;
+allow 2a0b:f4c2:4::109;
+allow 2a0b:f4c2:4::110;
+allow 2a0b:f4c2:4::96;
+allow 2a0b:f4c2:4::97;
+allow 2a0b:f4c2:4::98;
+allow 2a0b:f4c2:4::99;
 allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
@@ -605,14 +619,6 @@ allow 2a0f:df00:0:255::203;
 allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
-allow 2a0f:e586:f:f::182;
-allow 2a0f:e586:f:f::188;
-allow 2a0f:e586:f:f:23ae:4067:bed4:a129;
-allow 2a0f:e586:f:f:a052:2166:bef9:a432;
-allow 2a0f:e586:f:f:a054:113e:490b:da50;
-allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
-allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
-allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
@@ -638,7 +644,6 @@ allow 2a12:a800:2:1:185:241:208:204;
 allow 2a12:a800:2:1:185:241:208:206;
 allow 2a12:a800:2:1:185:241:208:71;
 allow 2a12:a800:2:1:185:241:208:81;
-allow 2a12:a800:2:1:185:241:208:82;
 allow 2a12:a800:2:1:185:241:208:92;
 allow 2a12:a800:2:1:45:138:16:107;
 allow 2a12:a800:2:1:45:138:16:113;
