Update lists at 20250704-0001

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -128,6 +128,7 @@ allow 2600:3c0b::f03c:95ff:fefa:bdff;
 allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:ad5c::1;
+allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
 allow 2602:fa59:4:246::1;
 allow 2602:fa8a:3:a::a;
