--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -892,6 +892,7 @@ allow 2600:3c0b::f03c:95ff:fefa:bdff;
 allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:ad5c::1;
+allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
 allow 2602:fa59:4:246::1;
 allow 2602:fa8a:3:a::a;
@@ -1806,7 +1807,6 @@ allow 91.227.77.62;
 allow 91.227.77.97;
 allow 91.92.109.126;
 allow 91.92.109.43;
-allow 92.113.144.149;
 allow 92.243.24.163;
 allow 92.246.84.133;
 allow 93.113.25.239;
