--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -892,6 +892,7 @@ deny 2600:3c0b::f03c:95ff:fefa:bdff;
 deny 2602:2e5::104;
 deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:ad5c::1;
+deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
 deny 2602:fa59:4:246::1;
 deny 2602:fa8a:3:a::a;
@@ -1806,7 +1807,6 @@ deny 91.227.77.62;
 deny 91.227.77.97;
 deny 91.92.109.126;
 deny 91.92.109.43;
-deny 92.113.144.149;
 deny 92.243.24.163;
 deny 92.246.84.133;
 deny 93.113.25.239;
