--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -128,6 +128,7 @@ deny 2600:3c0b::f03c:95ff:fefa:bdff;
 deny 2602:2e5::104;
 deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:ad5c::1;
+deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
 deny 2602:fa59:4:246::1;
 deny 2602:fa8a:3:a::a;
