Update lists at 20250704-0300

--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -839,6 +839,7 @@ allow 45.141.215.95;
 allow 45.141.215.97;
 allow 45.145.93.133;
 allow 45.148.10.111;
+allow 45.153.34.246;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -930,6 +931,7 @@ allow 5.196.95.34;
 allow 5.253.247.27;
 allow 5.255.100.219;
 allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
