--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1191,6 +1191,7 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1532,6 +1533,7 @@ allow 45.141.215.95;
 allow 45.141.215.97;
 allow 45.145.93.133;
 allow 45.148.10.111;
+allow 45.153.34.246;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1623,6 +1625,7 @@ allow 5.196.95.34;
 allow 5.253.247.27;
 allow 5.255.100.219;
 allow 5.255.100.224;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
