--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -839,6 +839,7 @@ set_real_ip_from 45.141.215.95;
 set_real_ip_from 45.141.215.97;
 set_real_ip_from 45.145.93.133;
 set_real_ip_from 45.148.10.111;
+set_real_ip_from 45.153.34.246;
 set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.61.186.203;
 set_real_ip_from 45.61.187.200;
@@ -930,6 +931,7 @@ set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.253.247.27;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.224;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
