Update lists at 20250704-2101

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -167,7 +167,6 @@ allow 154.53.58.161;
 allow 158.174.210.51;
 allow 160.119.249.240;
 allow 161.129.68.162;
-allow 16.176.9.153;
 allow 161.97.156.152;
 allow 162.210.173.17;
 allow 162.210.173.3;
@@ -1140,6 +1139,7 @@ allow 2a00:fbe4:1ab:ffff::133;
 allow 2a01:270:9847::1;
 allow 2a01:4f9:2b:75d::124:148;
 allow 2a01:5e0:36:c311::1;
+allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
@@ -1792,6 +1792,8 @@ allow 93.95.231.118;
 allow 93.95.231.14;
 allow 93.95.231.88;
 allow 93.99.104.128;
+allow 93.99.104.18;
+allow 93.99.104.194;
 allow 93.99.104.40;
 allow 94.102.51.15;
 allow 94.142.241.194;
