--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -365,6 +365,7 @@ deny 2a00:fbe4:1ab:ffff::133;
 deny 2a01:270:9847::1;
 deny 2a01:4f9:2b:75d::124:148;
 deny 2a01:5e0:36:c311::1;
+deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
