--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -167,7 +167,6 @@ set_real_ip_from 154.53.58.161;
 set_real_ip_from 158.174.210.51;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 161.129.68.162;
-set_real_ip_from 16.176.9.153;
 set_real_ip_from 161.97.156.152;
 set_real_ip_from 162.210.173.17;
 set_real_ip_from 162.210.173.3;
@@ -1140,6 +1139,7 @@ set_real_ip_from 2a00:fbe4:1ab:ffff::133;
 set_real_ip_from 2a01:270:9847::1;
 set_real_ip_from 2a01:4f9:2b:75d::124:148;
 set_real_ip_from 2a01:5e0:36:c311::1;
+set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
@@ -1792,6 +1792,8 @@ set_real_ip_from 93.95.231.118;
 set_real_ip_from 93.95.231.14;
 set_real_ip_from 93.95.231.88;
 set_real_ip_from 93.99.104.128;
+set_real_ip_from 93.99.104.18;
+set_real_ip_from 93.99.104.194;
 set_real_ip_from 93.99.104.40;
 set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.142.241.194;
