--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -135,6 +135,7 @@ allow 130.193.10.21;
 allow 130.193.15.186;
 allow 130.193.15.79;
 allow 131.72.79.38;
+allow 13.211.124.13;
 allow 135.125.239.70;
 allow 136.244.111.163;
 allow 138.59.18.110;
@@ -210,13 +211,13 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.65.148.133;
 allow 176.65.148.3;
-allow 176.65.149.100;
 allow 176.65.149.105;
 allow 176.65.149.84;
 allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
+allow 177.149.133.154;
 allow 177.153.51.238;
 allow 177.93.140.66;
 allow 178.17.170.144;
@@ -234,7 +235,6 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
-allow 179.250.84.254;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -397,7 +397,6 @@ allow 185.252.232.218;
 allow 185.254.196.141;
 allow 185.34.33.2;
 allow 185.35.202.222;
-allow 185.39.207.83;
 allow 185.40.4.100;
 allow 185.40.4.101;
 allow 185.40.4.121;
@@ -513,6 +512,7 @@ allow 194.15.115.212;
 allow 194.15.36.117;
 allow 194.163.157.49;
 allow 194.26.192.77;
+allow 194.53.137.156;
 allow 194.87.55.98;
 allow 195.160.220.104;
 allow 195.176.3.23;
@@ -576,7 +576,6 @@ allow 2001:41d0:601:1100::71bb;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1000::5196;
 allow 2001:41d0:701:1100::57d3;
-allow 2001:41d0:805:d300::2b19:1929;
 allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
@@ -1214,7 +1213,6 @@ allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
-allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
@@ -1344,6 +1342,7 @@ allow 2a0d:bbc7:0:1::3d5;
 allow 2a0d:bbc7:0:1::50;
 allow 2a0d:bbc7:0:1::7f;
 allow 2a0d:c2c0:1:4::2;
+allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
@@ -1724,7 +1723,6 @@ allow 82.221.131.86;
 allow 82.221.139.190;
 allow 82.29.128.140;
 allow 82.29.153.76;
-allow 83.147.17.190;
 allow 83.217.9.73;
 allow 83.228.94.69;
 allow 83.96.213.63;
