--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -135,6 +135,7 @@ set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 130.193.15.79;
 set_real_ip_from 131.72.79.38;
+set_real_ip_from 13.211.124.13;
 set_real_ip_from 135.125.239.70;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
@@ -210,13 +211,13 @@ set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.65.148.133;
 set_real_ip_from 176.65.148.3;
-set_real_ip_from 176.65.149.100;
 set_real_ip_from 176.65.149.105;
 set_real_ip_from 176.65.149.84;
 set_real_ip_from 176.65.149.87;
 set_real_ip_from 176.65.149.88;
 set_real_ip_from 176.65.149.96;
 set_real_ip_from 176.97.114.202;
+set_real_ip_from 177.149.133.154;
 set_real_ip_from 177.153.51.238;
 set_real_ip_from 177.93.140.66;
 set_real_ip_from 178.17.170.144;
@@ -234,7 +235,6 @@ set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
-set_real_ip_from 179.250.84.254;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -397,7 +397,6 @@ set_real_ip_from 185.252.232.218;
 set_real_ip_from 185.254.196.141;
 set_real_ip_from 185.34.33.2;
 set_real_ip_from 185.35.202.222;
-set_real_ip_from 185.39.207.83;
 set_real_ip_from 185.40.4.100;
 set_real_ip_from 185.40.4.101;
 set_real_ip_from 185.40.4.121;
@@ -513,6 +512,7 @@ set_real_ip_from 194.15.115.212;
 set_real_ip_from 194.15.36.117;
 set_real_ip_from 194.163.157.49;
 set_real_ip_from 194.26.192.77;
+set_real_ip_from 194.53.137.156;
 set_real_ip_from 194.87.55.98;
 set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
@@ -576,7 +576,6 @@ set_real_ip_from 2001:41d0:601:1100::71bb;
 set_real_ip_from 2001:41d0:700:10a2::;
 set_real_ip_from 2001:41d0:701:1000::5196;
 set_real_ip_from 2001:41d0:701:1100::57d3;
-set_real_ip_from 2001:41d0:805:d300::2b19:1929;
 set_real_ip_from 2001:41d0:a:5c0::1;
 set_real_ip_from 2001:41d0:a:fe22::1;
 set_real_ip_from 2001:470:1:908::9001;
@@ -1214,7 +1213,6 @@ set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:655b::1;
-set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:b0c7:6cc4::1;
@@ -1344,6 +1342,7 @@ set_real_ip_from 2a0d:bbc7:0:1::3d5;
 set_real_ip_from 2a0d:bbc7:0:1::50;
 set_real_ip_from 2a0d:bbc7:0:1::7f;
 set_real_ip_from 2a0d:c2c0:1:4::2;
+set_real_ip_from 2a0e:1d80:13:51e8::1;
 set_real_ip_from 2a0e:1d80:17:6f8d::1;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:101;
@@ -1724,7 +1723,6 @@ set_real_ip_from 82.221.131.86;
 set_real_ip_from 82.221.139.190;
 set_real_ip_from 82.29.128.140;
 set_real_ip_from 82.29.153.76;
-set_real_ip_from 83.147.17.190;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.228.94.69;
 set_real_ip_from 83.96.213.63;
