Update lists at 20250706-2101

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -253,7 +253,6 @@ allow 185.100.87.166;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
-allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -290,7 +289,6 @@ allow 185.170.114.25;
 allow 185.177.151.34;
 allow 185.183.157.214;
 allow 185.183.159.40;
-allow 185.183.192.147;
 allow 185.191.204.254;
 allow 185.195.236.55;
 allow 185.195.71.244;
@@ -1197,6 +1195,7 @@ allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:119:3f0b::1;
+allow 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
@@ -1220,7 +1219,6 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
-allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1642,6 +1640,7 @@ allow 5.255.111.64;
 allow 5.255.114.171;
 allow 5.255.115.58;
 allow 5.255.117.56;
+allow 5.255.118.151;
 allow 5.255.118.183;
 allow 5.255.118.218;
 allow 5.255.120.205;
@@ -1727,6 +1726,7 @@ allow 84.239.46.144;
 allow 85.239.41.130;
 allow 85.90.196.162;
 allow 85.93.218.204;
+allow 86.54.25.3;
 allow 86.54.28.49;
 allow 87.118.110.27;
 allow 87.118.116.103;
