Update lists at 20250707-0001

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -203,19 +203,17 @@ allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.255.198.243;
 allow 176.118.193.33;
-allow 176.121.81.51;
 allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.65.148.133;
 allow 176.65.148.3;
 allow 176.65.149.100;
-allow 176.65.149.105;
 allow 176.65.149.84;
 allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
-allow 177.149.133.154;
+allow 177.149.153.235;
 allow 177.153.51.238;
 allow 177.93.140.66;
 allow 178.17.170.144;
@@ -253,6 +251,7 @@ allow 185.100.87.166;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
+allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -289,6 +288,7 @@ allow 185.170.114.25;
 allow 185.177.151.34;
 allow 185.183.157.214;
 allow 185.183.159.40;
+allow 185.183.192.147;
 allow 185.191.204.254;
 allow 185.195.236.55;
 allow 185.195.71.244;
@@ -362,7 +362,6 @@ allow 185.225.69.232;
 allow 185.227.134.106;
 allow 185.227.68.78;
 allow 185.231.102.51;
-allow 185.233.100.23;
 allow 185.235.146.29;
 allow 185.241.208.115;
 allow 185.241.208.185;
@@ -833,7 +832,6 @@ allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
 allow 23.151.8.8;
-allow 23.155.8.104;
 allow 23.184.48.78;
 allow 23.191.200.10;
 allow 23.191.200.11;
@@ -892,7 +890,6 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
-allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
@@ -1219,6 +1216,7 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
+allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1316,7 +1314,6 @@ allow 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:6a41:c13:1337::107;
-allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:2a21::1;
 allow 2a0d:8140:1fff:2c04::1;
 allow 2a0d:bbc7:0:1::10a;
@@ -1609,6 +1606,7 @@ allow 45.95.169.109;
 allow 45.95.169.110;
 allow 45.95.169.252;
 allow 46.165.243.36;
+allow 46.17.104.189;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
